# parquets

./: .dockerignore  .gitignore  Dockerfile  main.py  otro_test.py  pyproject.toml  readme.md  requirements.txt  test.py
core/: config.ini  config.py  db_conn.py  db_connector.py
parquet_airflow/: __init__.py
parquet_airflow/controllers/: app_controller.py  jobs_controller.py
parquet_airflow/models/: parquet_pg_model.py
parquet_airflow/schemas/: connection_schema.py  dynamic_parquet_schema.py  job_logs_schema.py  parquet_jobs_schema.py
parquet_airflow/services/: parquet_service.py
parquet_airflow/utils/: format_query_util.py  utils.py
