[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parquet_airflow"]

[project]
name = "parquets"
version = "0.1.0"
description = "parquets business logic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.12",
    "pyodbc>=5.3.0",
]
